update ZERO_OR_THREE_DIGITS define to work as intended

https://bugzilla.gnome.org/show_bug.cgi?id=674924